<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_market"
        android:icon="@drawable/ic_market"
        android:title="@string/bottom_navigation_market" />
    <item
        android:id="@+id/action_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/bottom_navigation_wallet" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_navigation_search" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_navigation_profile" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:title="@string/bottom_navigation_about" />

</menu>
