<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButton"
            />

        <TextView
            android:id="@+id/cryptoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/crypto_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <EditText
            android:id="@+id/inputCryptoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:hint="@string/hint_crypto_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptoName"
            app:layout_constraintTop_toTopOf="@+id/cryptoName" />

        <TextView
            android:id="@+id/cryptoType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/crypto_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCryptoName" />

        <Spinner
            android:id="@+id/inputCryptoType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_crypto_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptoType"
            app:layout_constraintTop_toTopOf="@+id/cryptoType" />

        <TextView
            android:id="@+id/cryptoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crypto_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCryptoType" />

        <EditText
            android:id="@+id/inputCryptoDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/hint_crypto_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptoDescription"
            app:layout_constraintTop_toTopOf="@+id/cryptoDescription" />

        <TextView
            android:id="@+id/cryptoAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crypto_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCryptoDescription" />

        <EditText
            android:id="@+id/inputCryptoAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/hint_crypto_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptoAmount"
            app:layout_constraintTop_toTopOf="@+id/cryptoAmount" />


        <TextView
            android:id="@+id/cryptoCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crypto_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCryptoAmount" />

        <TextView
            android:id="@+id/cryptoCostValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/crypto_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptoCost"
            app:layout_constraintTop_toTopOf="@+id/cryptoCost" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="cryptoCostValue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

