<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButton"
            />

        <TextView
            android:id="@+id/walletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <TextView
            android:id="@+id/inputWalletName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_wallet_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/walletName"
            app:layout_constraintTop_toTopOf="@+id/walletName" />

        <TextView
            android:id="@+id/walletDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputWalletName" />

        <EditText
            android:id="@+id/inputWalletDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_wallet_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/walletDescription"
            app:layout_constraintTop_toTopOf="@+id/walletDescription" />

        <TextView
            android:id="@+id/cryptosAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_crypto_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputWalletDescription" />

        <TextView
            android:id="@+id/cryptosAmountValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/wallet_crypto_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptosAmount"
            app:layout_constraintTop_toBottomOf="@+id/inputWalletDescription" />

        <TextView
            android:id="@+id/cryptosCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_crypto_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cryptosAmount" />

        <TextView
            android:id="@+id/cryptosCostValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wallet_crypto_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cryptosCost"
            app:layout_constraintTop_toBottomOf="@+id/cryptosAmount" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="walletName, walletDescription, cryptosAmount, cryptosCost" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_wallet" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

